# DeepLearningAI_ShortCourses

./: Info.md  README.md  count_folders.py  default_notebook.ipynb  library.py  pyproject.toml
Advanced_Retrieval_for_AI_with_Chroma/: L3-query_expansion.ipynb  L4-cross_encoder_re_ranking.ipynb
Attention_in_Transformers_Concepts_and_Code_in_PyTorch/: Lesson_6.ipynb  Lesson_9.ipynb
Automated_Testing_for_LLMOps/: L2_overview_of_automated_evals.ipynb  L5_exploring-circleci-config-file.ipynb
Build_LLM_Apps_with_LangChain/: LangChainJS_Next_Step.ipynb
Building_Gen_AI_Apps_with_Gradio/: 1_NLP_Task_Interface.ipynb  Info.md
Building_Systems_with_the_ChatGPT_API/: Info.md
ChatGPT_Prompt_Engineering_for_Developers/: Info.md
Evaluating_AI_Agents/: Appendix.ipynb  L11.ipynb  L3.ipynb  L5.ipynb  L7.ipynb  L9.ipynb
Evaluating_and_Debugging_GenAI/: 2_diffusion_training.ipynb  4_llm_eval_and_tracing.ipynb  Info.md
Evaluating_and_Debugging_GenerativeAI/: 1_intro_starter.ipynb
Finetuning_Large_Language_Models/: 1_why_finetune.ipynb  2_where_finetuning_fits_in.ipynb  3_Instruction_tuning_lab_student.ipynb  Info.md
Function_Tools_and_Agents_with_LangChain/: Info.md  L2-lcel-student.ipynb
Functions_Tools_and_Agents_with_LangChain/: L1-openai_functions_student.ipynb  L3-function-calling-student.ipynb
How_Business_Thinkers_Can_Start_Building_AI_Plugins_with_Semantic_Kernel/: Info.md  L1_student.ipynb  L2_student.ipynb  L3_student.ipynb  L4_student.ipynb  L5_student.ipynb
How_Diffusion_Models_Work/: 1_Sampling_and_Neural_network.ipynb  2_Training.ipynb  Info.md
(+41 files in other folders)
